<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_new_travel"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.cassandre.dansmavalise.NewTravelActivity">
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingTop="16dp"
        android:paddingBottom="16dp">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="25dp"
            android:text="@string/new_travel_Destination"
            android:textAppearance="@style/FormulaireTitre"
            android:layout_margin="5dp"/>
        <AutoCompleteTextView
            android:id="@+id/activity_new_travel_destination"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:hint="@string/new_travel_Destination"
            android:layout_margin="5dp"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="25dp"
            android:text="@string/new_travel_Sexe"
            android:textAppearance="@style/FormulaireTitre"
            android:layout_margin="5dp"/>
        <Spinner
            android:id="@+id/activity_new_travel_sexe"
            android:layout_width="match_parent"
            android:layout_height="50dp"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="25dp"
            android:text="@string/new_travel_depart"
            android:textAppearance="@style/FormulaireTitre"
            android:layout_margin="5dp"/>
        <DatePicker
            android:id="@+id/activity_new_travel_datedepart"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:datePickerMode="spinner"
            android:calendarViewShown="false"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="25dp"
            android:text="@string/new_travel_arrivee"
            android:textAppearance="@style/FormulaireTitre"
            android:layout_margin="5dp"/>
        <DatePicker
            android:id="@+id/activity_new_travel_datedefin"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:datePickerMode="spinner"
            android:calendarViewShown="false"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
        <Button
            android:id="@+id/activity_new_travel_valider"
            android:background="@color/colorPrimary"
            android:textColor="@color/white"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:text="@string/button_valider"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"/>
    </LinearLayout>
</ScrollView>
