<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#C0000000">
    <RelativeLayout
        android:layout_margin="16dp"
        android:background="#FFFFFF"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:padding="16dp"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/confirmation_resume"
                android:textSize="30dp"
                android:layout_gravity="center"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Title"/>
            <TextView
                android:layout_marginTop="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/confirmation_dateduvoyage"
                android:textSize="20dp"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Body1"/>
            <TextView
                android:id="@+id/confirmation_travel_popup_dates"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="value - value"
                android:textSize="20dp"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Body2"/>
            <LinearLayout
                android:paddingTop="10dp"
                android:orientation="horizontal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/confirmation_nombredejours"
                    android:textSize="20dp"
                    android:textAppearance="@style/Base.TextAppearance.AppCompat.Body1"/>
                <TextView
                    android:id="@+id/confirmation_travel_popup_nbJours"
                    android:layout_marginLeft="30dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="value"
                    android:textSize="20dp"
                    android:textAppearance="@style/Base.TextAppearance.AppCompat.Body2"/>
            </LinearLayout>
            <LinearLayout
                android:paddingTop="10dp"
                android:orientation="horizontal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/confirmation_votreSexe"
                    android:textSize="20dp"
                    android:textAppearance="@style/Base.TextAppearance.AppCompat.Body1"/>
                <TextView
                    android:id="@+id/confirmation_travel_popup_sexe"
                    android:layout_marginLeft="30dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="value"
                    android:textSize="20dp"
                    android:textAppearance="@style/Base.TextAppearance.AppCompat.Body2"/>
            </LinearLayout>
            <com.google.android.gms.maps.MapView
                xmlns:map="http://schemas.android.com/apk/res-auto"
                android:id="@+id/confirmation_travel_popup_mapView"
                android:layout_margin="16dp"
                android:layout_width="match_parent"
                android:layout_height="175dp"
                map:cameraZoom="13"
                map:mapType="normal"
                map:liteMode="true"
                android:apiKey="AIzaSyChyvCs9Q3HBdcGqrp-9fSct75NkFthb5Y"/>
            <LinearLayout
                android:gravity="center"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <Button
                    android:layout_margin="16dp"
                    android:layout_width="100dp"
                    android:layout_height="match_parent"
                    android:text="@string/confirmez"/>
                <Button
                    android:layout_margin="16dp"
                    android:layout_width="100dp"
                    android:layout_height="match_parent"
                    android:text="@string/Annuler"/>
            </LinearLayout>
        </LinearLayout>
    </RelativeLayout>
</ScrollView>